summary lesson6 add

--- a/Lesson6.html
+++ b/Lesson6.html
@@ -74,8 +74,19 @@
             <br>--> We Suggest: Always Quote Attribute Values<br><br>
 
             &nbsp; The HTML standard does not require quotes around attribute values.<br>
-            However, W3C recommends quotes in HTML, and demands quotes for stricter document types like XHTML.
+            However, W3C recommends quotes in HTML, and demands quotes for stricter document types like XHTML.<br><br>
         </p>
     </div>
+    <h2>Chapter Summary</h2>
+    <p>
+        ° All HTML elements can have attributes<br>
+        ° The href attribute of &lt;a&gt; specifies the URL of the page the link goes to<br>
+        ° The src attribute of &lt;img&gt; specifies the path to the image to be displayed<br>
+        ° The width and height attributes of &lt;img&gt; provide size information for images<br>
+        ° The alt attribute of &lt;img&gt; provides an alternate text for an image<br>
+        ° The style attribute is used to add styles to an element, such as color, font, size, and more<br>
+        ° The lang attribute of the &lt;html&gt; tag declares the language of the Web page<br>
+        ° The title attribute defines some extra information about an element<br>
+    </p>
 </body>
 </html>
